--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,6 +67,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
     *,
     ::after,
     ::before,
@@ -77,6 +78,7 @@
 }
 
 @layer utilities {
+
     body,
     html {
         --font-sans:
@@ -161,7 +163,22 @@
     * {
         @apply border-border outline-ring/50;
     }
+
     body {
         @apply bg-background text-foreground;
+    }
+}
+
+@layer components {
+    .label {
+        @apply block mb-1 text-gray-500 dark:text-gray-300 font-medium
+    }
+
+    .input {
+        @apply block w-full p-2 rounded-md shadow-sm border border-gray-300 dark:border-gray-600 text-gray-500
+    }
+
+    .btn-primary {
+        @apply bg-indigo-600 hover:bg-indigo-500 text-white font-medium p-2 rounded-md
     }
 }
