--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -185,4 +185,8 @@
     .input-error {
         @apply text-sm text-red-500 dark:text-red-400
     }
+
+    .price-range {
+        @apply w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700
+    }
 }
