--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -179,11 +179,11 @@
     }
 
     .input-filter-l {
-        @apply placeholder:text-gray-400 dark:placeholder:text-gray-600 border border-gray-200 dark:border-gray-700 rounded-t-md rounded-l-md rounded-b-md rounded-r-none text-sm font-medium text-gray-600 dark:text-gray-400 dark:bg-gray-800 p-1
+        @apply placeholder:text-gray-400 dark:placeholder:text-gray-600 border border-gray-200 dark:border-gray-700 rounded-l-md rounded-r-none text-sm font-medium text-gray-600 dark:text-gray-400 dark:bg-gray-800 p-1
     }
 
     .input-filter-r {
-        @apply placeholder:text-gray-400 dark:placeholder:text-gray-600 border border-l-0 border-gray-200 dark:border-gray-700 rounded-t-md rounded-l-none rounded-b-md rounded-r-md text-sm font-medium text-gray-600 dark:text-gray-400 dark:bg-gray-800 p-1
+        @apply placeholder:text-gray-400 dark:placeholder:text-gray-600 border border-l-0 border-gray-200 dark:border-gray-700 rounded-l-none rounded-r-md text-sm font-medium text-gray-600 dark:text-gray-400 dark:bg-gray-800 p-1
     }
 
     .btn-normal {
