adding some classes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -202,4 +202,8 @@
     .price-range {
         @apply w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700
     }
+
+    .btn-outline {
+        @apply p-2 rounded-md border shadow-sm border-gray-300 dark:border-gray-800 hover:border-gray-400 hover:bg-gray-50 dark:hover:border-gray-700 dark:hover:bg-gray-800
+    }
 }
